--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "cypress": "^9.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^24.7.0",
     "json-server": "^0.16.3"
   },
